welcome.lessons.welcome.traversal.Snake.scala.error
SnakeBuggle:4: error: illegal start of declaration (possible cause: missing `=' in front of current method body)
		(estFaceMur && getDirection==Direction.NORD)
                ^